Add divs with DOM manipulation and remove all console.logs

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 </head>
 <body>
 
+    <div class="container">
+        <div class="comp-score"></div>
+        <div class="your-score"></div>
+        <div class="results"></div>
+    </div>
+
     <button class="rock">Rock</button>
     <button class="paper">Paper</button>
     <button class="scissors">Scissors</button>
