Add Finishing touches to the game including ending messages. Add stlyesheet

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 <body>
 
     <div class="container">
-        <div class="comp-score"></div>
-        <div class="your-score"></div>
-        <div class="results"></div>
+        <p class="comp-score">The computer's score is 0</p>
+        <p class="your-score">Your score is 0</p>
+        <p class="results">Results</p>
+        <p class="win-lose">Whoever is first to 5 wins!</p>
     </div>
 
     <button class="rock">Rock</button>
