Add styling and finishing touches

--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css"></link>
 </head>
 <body>
 
     <div class="container">
         <p class="comp-score">The computer's score is 0</p>
         <p class="your-score">Your score is 0</p>
-        <p class="results">Results</p>
+        <p class="results">Results: ?</p>
         <p class="win-lose">Whoever is first to 5 wins!</p>
-    </div>
 
-    <button class="rock">Rock</button>
-    <button class="paper">Paper</button>
-    <button class="scissors">Scissors</button>
+        <button class="rock">Rock</button>
+        <button class="paper">Paper</button>
+        <button class="scissors">Scissors</button>
+    </div>
 
     <script src="script.js"></script>
 </body>
