--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="style.css"></link>
 </head>
 <body>
-
     <div class="container">
+        <h1>Rock, Paper, Scissors</h1>
+
         <p class="comp-score">The computer's score is 0</p>
         <p class="your-score">Your score is 0</p>
         <p class="results">Results: ?</p>
